fixed cards grid bug on mobile added README.md

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -117,6 +117,10 @@
 
     grid-template-columns: repeat(auto-fill, minmax(370px, 1fr));
     gap: 40px 20px;
+
+    @media screen and (max-width: $xsmall) {
+      grid-template-columns: auto;
+    }
   }
 }
 
